--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
 						<h4 class="text-center" >AROUND THE WEB</h4><div class="line mt-"></div><div class="line2"></div>
 						<p class="text-center mt-4">
-							<a href="https://github.com/abhishekrajravi" target="_blank" class="mr-3"><i class="fa fa-github-square fa-2x github"></i></a> 
+							<a href="https://github.com/arrbxr" target="_blank" class="mr-3"><i class="fa fa-github-square fa-2x github"></i></a> 
 							<a href="https://codepen.io/arrbxr/" target="_blank" class="mr-3"><i class="fa fa-codepen fa-2x codepen"></i></a> 
 							<a href="https://www.freecodecamp.org/arrbxr" target="_blank" class="mr-3"><i class="fa fa-free-code-camp fa-2x free-code-camp"></i></a>
 							<a href="https://twitter.com/arrbxr" target="_blank" class="mr-3"><i class="fa fa-twitter-square fa-2x medium"></i></a>
